--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,15 @@
-name: calcium
-channels:
-  - defaults
-dependencies:
-  - python=3.9
-  - matplotlib
-  - numpy
-  - pandas
-  - scipy
-  - seaborn
-  - peakutils
-  - py7zr
-prefix: C:\Users\qlbsg\anaconda3\envs\calcium
+  name: calcium
+  channels:
+    - defaults
+    - conda-forge
+  dependencies:
+    - python=3.9
+    - numpy
+    - pandas
+    - matplotlib
+    - seaborn
+    - pip
+    - pip:
+      - cupy-cuda11x
+      - peakutils
+      - py7zr
